# apps/server/src/modules/maintenance/maintenance.dto.go
@@ -1,5 +1,7 @@
 package maintenance
 
+import "time"
+
 type CreateUpdateDto struct {
 	Title         string   `json:"title" validate:"required"`
 	Description   string   `json:"description"`
@@ -39,23 +41,23 @@ type PartialUpdateDto struct {
 }
 
 type MaintenanceResponseDto struct {
-	ID            string   `json:"id"`
-	Title         string   `json:"title"`
-	Description   string   `json:"description"`
-	UserID        string   `json:"user_id"`
-	Active        bool     `json:"active"`
-	Strategy      string   `json:"strategy"`
-	StartDateTime *string  `json:"start_date_time,omitempty" validate:"omitempty,datetime=2006-01-02T15:04"`
-	EndDateTime   *string  `json:"end_date_time,omitempty" validate:"omitempty,datetime=2006-01-02T15:04"`
-	StartTime     *string  `json:"start_time,omitempty" validate:"regexp=^(?:[01]\d|2[0-3]):[0-5]\d$"`
-	EndTime       *string  `json:"end_time,omitempty" validate:"regexp=^(?:[01]\d|2[0-3]):[0-5]\d$"`
-	Weekdays      []int    `json:"weekdays,omitempty"`
-	DaysOfMonth   []int    `json:"days_of_month,omitempty"`
-	IntervalDay   *int     `json:"interval_day,omitempty"`
-	Cron          *string  `json:"cron,omitempty"`
-	Timezone      *string  `json:"timezone,omitempty"`
-	Duration      *int     `json:"duration,omitempty"`
-	CreatedAt     string   `json:"created_at"`
-	UpdatedAt     string   `json:"updated_at"`
-	MonitorIds    []string `json:"monitor_ids"`
+	ID            string    `json:"id"`
+	Title         string    `json:"title"`
+	Description   string    `json:"description"`
+	UserID        string    `json:"user_id"`
+	Active        bool      `json:"active"`
+	Strategy      string    `json:"strategy"`
+	StartDateTime *string   `json:"start_date_time,omitempty" validate:"omitempty,datetime=2006-01-02T15:04"`
+	EndDateTime   *string   `json:"end_date_time,omitempty" validate:"omitempty,datetime=2006-01-02T15:04"`
+	StartTime     *string   `json:"start_time,omitempty" validate:"regexp=^(?:[01]\d|2[0-3]):[0-5]\d$"`
+	EndTime       *string   `json:"end_time,omitempty" validate:"regexp=^(?:[01]\d|2[0-3]):[0-5]\d$"`
+	Weekdays      []int     `json:"weekdays,omitempty"`
+	DaysOfMonth   []int     `json:"days_of_month,omitempty"`
+	IntervalDay   *int      `json:"interval_day,omitempty"`
+	Cron          *string   `json:"cron,omitempty"`
+	Timezone      *string   `json:"timezone,omitempty"`
+	Duration      *int      `json:"duration,omitempty"`
+	CreatedAt     time.Time `json:"created_at"`
+	UpdatedAt     time.Time `json:"updated_at"`
+	MonitorIds    []string  `json:"monitor_ids"`
 }
